# cpp-lua-entity-binding

./: .gitignore  CMakeLists.txt  README.md  ScriptClass.h  camera.lua  component.lua  components.lua  engine.lua  entity.lua  foo.lua  log.lua  main.cpp  main.lua  player.lua  run.sh  scripts
src/: camera.lua  luafunction.cpp  main.cpp  main.lua  player.lua  printlua.cpp
